pomfile changes